--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     image: postgres:alpine                                                                                                                                
     volumes:                                                                                                                                              
       - postgres_db:/var/lib/postgresql/data                                                                                                              
-      - ./dbfiles:/dbfiles                                                                                                                                
+      - ./dbfiles:/dbfiles 
+      - ./dbfiles/init.sql:/docker-entrypoint-initdb.d/init.sql                                                                                                                               
     env_file:                                                                                                                                             
       - env
   app:
@@ -16,8 +17,8 @@ services:
       - env
     ports:
       - 8000:8000
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
     volumes:
       - ./:/app
 volumes:                                                                                                                                                  
